--- a/css/backoffice/layout/blocks-integrations/_object-details-with-tab-container.scss
+++ b/css/backoffice/layout/blocks-integrations/_object-details-with-tab-container.scss
@@ -4,7 +4,7 @@
  */
 
 // Note: We use the child ">" selector to ensure this applies only the child tab container, not another one that would be nested
-.ibo-object-details {
+.ibo-object-details.ibo-has-medallion-icon {
   > .ibo-panel--body {
     > .ibo-tab-container {
       > .ibo-tab-container--tabs-list {
