--- a/templates/base/layouts/activity-panel/activity-entry/edits-entry.html.twig
+++ b/templates/base/layouts/activity-panel/activity-entry/edits-entry.html.twig
@@ -3,7 +3,7 @@
 {% block iboActivityEntryExtraClasses %}ibo-edits-entry{% endblock %}
 
 {% block iboActivityEntryMainInformationContent %}
-    {% if (oUIBlock.GetAttributes()|length == 1) and (oUIBlock.GetAttributes()[0]['descriptions'].length == 1) %}
+    {% if (oUIBlock.GetAttributes()|length == 1) and (oUIBlock.GetAttributes()|first['descriptions']|length == 1) %}
         <span class="ibo-edits-entry--short-description">{{ oUIBlock.GetShortDescriptionAsHtml()|raw }}</span>
     {% else %}
         <a href="#" class="ibo-edits-entry--short-description" data-role="ibo-edits-entry--long-description-toggler">
