N°3959 - Truncate vertical tabs label when too long, label can be read entirely through a tooltip

--- a/css/backoffice/layout/tab-container/_tab-container.scss
+++ b/css/backoffice/layout/tab-container/_tab-container.scss
@@ -85,6 +85,10 @@ $ibo-tab--temporary-remote-content--button--hover--color: $ibo-color-grey-200 !d
   @extend %ibo-hyperlink-inherited-colors
 }
 
+.ibo-tab-container--tab-toggler-label {
+  @extend %ibo-text-truncated-with-ellipsis;
+}
+
 .ibo-tab-container--extra-tabs-container {
   @extend .ibo-tab-container--tab-header;
 
