N°3907 - Polishing: Run query

--- a/templates/base/components/input/input-textarea.html.twig
+++ b/templates/base/components/input/input-textarea.html.twig
@@ -9,6 +9,7 @@
                       data-{{ sName }}="{{ sValue }}"
                   {% endfor %}
               {% endif %}
+            {% if oUIBlock.GetAdditionalCSSClassesAsString() %} class="{{ oUIBlock.GetAdditionalCSSClassesAsString() }}"{% endif %}
             {% if oUIBlock.GetPlaceHolder() %}  placeholder="{{ oUIBlock.GetPlaceHolder() }}" {% endif %}
 	>{{ oUIBlock.GetValue()|raw }}</textarea>
 {% endblock %}
