--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -96,7 +96,12 @@ $ibo-field--value-decoration--spacing-x: 0.5rem !default;
   display: table;
   width: 100%;
   color: $ibo-field--value--color;
-  word-break: break-word; /* Avoid value to overflow from its container with very long strings (typically URLs) */
+
+  /* Avoid value to overflow from its container with very long strings (typically URLs) */
+  * {
+    word-break: break-word;
+    white-space: pre-wrap;
+  }
 
   /* Hack to force a table to fit its container without overflow (see N°2127) */
   /* Note that along with with, we now display a "expand" icon on large fields so we can have a better view of its content */
