--- a/templates/base/components/input/input-textarea.html.twig
+++ b/templates/base/components/input/input-textarea.html.twig
@@ -11,5 +11,6 @@
               {% endif %}
             {% if oUIBlock.GetAdditionalCSSClassesAsString() %} class="{{ oUIBlock.GetAdditionalCSSClassesAsString() }}"{% endif %}
             {% if oUIBlock.GetPlaceHolder() %}  placeholder="{{ oUIBlock.GetPlaceHolder() }}" {% endif %}
+            {% if oUIBlock.IsDisabled() %} disabled="disabled" {% endif %}
 	>{{ oUIBlock.GetValue()|raw }}</textarea>
 {% endblock %}
