SCSS: Refactor code typography - New variables to defines base / code font families - New helpers for code typography in all sizes

--- a/css/backoffice/layout/_content.scss
+++ b/css/backoffice/layout/_content.scss
@@ -47,8 +47,7 @@ $ibo-code--padding: 1.25rem 1.5rem !default;
 }
 
 .ibo-code {
-  font-family: $family-code;
-  font-size: $ibo-font-size-150;
   background-color: $ibo-code--background-color;
   padding: $ibo-code--padding;
+  @extend %ibo-font-code-150;
 }
