N°3914 - Fix single row selection in the portal's datatables

--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/mode_search_regular.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/mode_search_regular.html.twig
@@ -122,7 +122,7 @@
 			"dom": '<"row"<"col-sm-6"l><"col-sm-6"<f><"visible-xs"p>>>t<"row"<"col-sm-6"i><"col-sm-6"p>>',
 			"columns": getColumnsDefinition(),
 			"select": {
-				"style": "{{ (bMultipleSelect) ? 'multi' : 'os' }}"
+				"style": "{{ (bMultipleSelect) ? 'multi' : 'single' }}"
 			},
 			"rowId": "id",
 			"rowCallback": function(oRow, oData){
