Fix indirect links block height

--- a/css/backoffice/application/display-block/_block-indirect-links.scss
+++ b/css/backoffice/application/display-block/_block-indirect-links.scss
@@ -1,7 +1,8 @@
 .ibo-block-indirect-links--edit--dialog{
   overflow:hidden !important;
   > form{
-  overflow: auto;
+    overflow: auto;
+    height: 100%
   }
 }
 
