--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -6,7 +6,9 @@
 @import "dashlet-within-dashboard";
 @import "add-to-dashboard";
 @import "caselog-entry-form-within-activity-panel";
-@import "panel-with-tab-container";
 @import "panel-with-datatable";
+@import "panel-with-tab-container";
+@import "panel-within-main-content";
+@import "panel-within-modal";
 @import "object-details-with-tab-container";
 @import "medallion-with-blocklist";
