N°3914 Fix modal backdrop on lists' "configure this list" modal

--- a/templates/base/components/datatable/layout.ready.js.twig
+++ b/templates/base/components/datatable/layout.ready.js.twig
@@ -298,6 +298,7 @@ $('#datatable_dlg_{{ oUIBlock.GetId() }}').dialog(
             autoOpen: false,
             title: "{{ 'UI:ListConfigurationTitle'|dict_s }}",
             width: 500,
+            modal: true,
             open: function () {
                 $('#datatable_dlg_{{ oUIBlock.GetId() }}').find('[name=action]').val("none");
             },
