SCSS: Fix base content layout not behaving the same way as the one with side content

--- a/css/backoffice/pages/_base.scss
+++ b/css/backoffice/pages/_base.scss
@@ -77,8 +77,14 @@ body{
 	z-index: 10;
 
 	flex-grow: 1; /* To occupy all height available */
+  overflow: hidden; /* Only the content areas should scroll */
+
+  > * {
+    height: 100%;
+  }
 }
 #ibo-main-content{
 	padding-top: $ibo-main-content--padding-top;
 	padding-bottom: $ibo-main-content--padding-bottom;
+  overflow: auto; /* For scroll to happen in the main content instead of the center content */
 }
